fixed overflow on mobile view

--- a/assets/css/confirmation.css
+++ b/assets/css/confirmation.css
@@ -74,7 +74,7 @@
  */
  @media(max-width:500px) {
      section {
-        width: 95vw;
+        width: 90vw;
         white-space: nowrap;
      }
      .confirm {
